fix : fixed mobile view background image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <textarea name="input-text" id="input-text" cols="30" rows="10" placeholder="Please enter your text you wish to translate."></textarea>
         <button id="btn-translate">Minion Translator</button>
+        <!-- <div id="spinner"></div> -->
         <textarea name="output-text" id="output-text" cols="30" rows="10" placeholder="Your translated text will appear here 👇" readonly></textarea>
     </div>
     <footer>about</footer>
